--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^3.3.4",
     "@langchain/community": "^0.0.26",
     "@langchain/core": "^0.1.35",
@@ -29,6 +32,7 @@
     "clsx": "^2.1.0",
     "emoji-mart": "^5.5.2",
     "framer-motion": "^11.0.3",
+    "jquery": "^3.7.1",
     "langchain": "^0.1.13",
     "lucide-react": "^0.322.0",
     "next": "14.1.0",
@@ -48,6 +52,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.29",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
